settings notifications tab was added

--- a/app/pug/pages/settings-page/education/_index.pug
+++ b/app/pug/pages/settings-page/education/_index.pug
@@ -65,7 +65,7 @@ include /partials/skill
           .row-group__item
             h4 Skills:
           .row-group__item
-            +button({type:'bordered', size:'xs'})(type="button")
+            +button({type:'bordered', size:'30'})(type="button")
               +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
       .column-group
         .column-group__item
@@ -82,7 +82,7 @@ include /partials/skill
           .row-group__item
             h4 Expertise:
           .row-group__item
-            +button({type:'bordered', size:'xs'})(type="button")
+            +button({type:'bordered', size:'30'})(type="button")
               +icon({name:'plus', fill:'surfie-green', width:'14', height:'14'})
       .column-group
         .column-group__item
