--- a/app/pug/pages/settings-page/general/_index.pug
+++ b/app/pug/pages/settings-page/general/_index.pug
@@ -33,7 +33,7 @@ include /partials/link
       .settings-general__avatar-wrap
         +avatar({size:'xl', image:'images/user/avatar.jpg'})
         .settings-general__avatar-button
-          +button({bg:'alabaster', type:'round'})(type="button")
+          +button({bg:'alabaster', type:'round', size:'50'})(type="button")
             +icon({name:'camera', fill:'boston-blue', width:'s18', height:'16'})
       .settings-general__avatar-date
         p.p-sm Member since: 2015-04-12
