--- a/app/pug/partials/button.pug
+++ b/app/pug/partials/button.pug
@@ -9,7 +9,7 @@ mixin button(props = {})
       [`button--bg-${bg}`]: bg,
       [`button--border-${border}`]: border,
       [`button--size-${size}`]: size,
-      'button--shadow': shadow,
+      'button--shadowed': shadow,
       [classes]: classes
     })
 
