--- a/app/pug/partials/checkbox.pug
+++ b/app/pug/partials/checkbox.pug
@@ -12,4 +12,4 @@ mixin checkbox(props = {})
     .checkbox__box
       input(class="checkbox__input" type="checkbox" checked=checked)
       span.checkbox__checkmark
-    span.checkbox__name #{label}
+    span.checkbox__name !{label}
