--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -24,6 +24,7 @@
 @import ./components/row-group
 @import ./components/svg-icon
 @import ./components/icon-inline
+@import ./components/icon-title
 @import ./components/avatar
 @import ./components/close
 @import ./components/link
@@ -42,6 +43,7 @@
 @import ./components/inline-button
 @import ./components/select
 @import ./components/dropdown
+@import ./components/table
 @import ./components/tabs
 @import ./components/status-message
 @import ./components/modal-dialog
@@ -63,5 +65,7 @@
 @import ./components/info-list
 @import ./components/settings-general
 @import ./components/settings-education
+@import ./components/settings-services
+@import ./components/settings-notifications
 @import ./components/slill
 @import ./components/uploaded-documents
