--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -11,146 +11,91 @@
   z-index: 1
   border-radius: $r-primary
   transition: 0.2s
-  &:after
-    position: absolute
-    content: ''
-    width: 100%
-    height: 100%
-    top: 0
-    left: 0
-    border-radius: $r-primary
-    background-color: $c-surfie-green
-    transition: 0.2s
-    z-index: -1
+  background-color: $c-surfie-green
+  transition: 0.2s
   &:hover
-    &:after
-      background-color: darken($c-surfie-green, 8%)
+    background-color: darken($c-surfie-green, 8%)
   &:focus
     color: $c-white
-    &:after
-      background-color: darken($c-surfie-green, 8%)
-      box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
+    background-color: darken($c-surfie-green, 8%)
+    box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
   &:active
-    color: $c-white
-    &:after
-      background-color: darken($c-surfie-green, 10%)
+    background-color: darken($c-surfie-green, 10%)
 
-  // Modifiers
+  // Types
   &--fluid
     width: 100%
-  &--squere
-    padding: 23px
   &--round
-    overflow: hidden
     border-radius: 50%
-    width: 50px
-    height: 50px
-    padding: 4px
-  &--shadow
+  &--shadowed
     box-shadow: $s-primary
   &--bordered
     color: $c-surfie-green
-    &:after
-      background-color: transparent
-      border: 2px solid $c-surfie-green
+    background-color: transparent
+    border: 2px solid $c-surfie-green
     &:hover
       color: $c-white
-      &:after
-        background-color: $c-surfie-green
+      border-color: darken($c-surfie-green, 8%)
+      background-color: darken($c-surfie-green, 8%)
       svg
         fill: $c-white
     &:focus
-      color: $c-white
-      &:after
-        background-color: darken($c-surfie-green, 8%)
-        box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
-        border-color: darken($c-surfie-green, 8%)
+      border-color: darken($c-surfie-green, 8%)
+      background-color: darken($c-surfie-green, 8%)
       svg
         fill: $c-white
     &:active
-      color: $c-white
-      &:after
-        background-color: darken($c-surfie-green, 10%)
-        border-color: darken($c-surfie-green, 10%)
-      svg
-        fill: $c-white
+      border-color: darken($c-surfie-green, 10%)
+      background-color: darken($c-surfie-green, 10%)
+  // Background colors
   &--bg-cornflower-blue
-    &:after
-      background-color: $c-cornflower-blue
+    background-color: $c-cornflower-blue
     &:hover
-      &:after
-        background-color: darken($c-cornflower-blue, 8%)
+      background-color: darken($c-cornflower-blue, 8%)
     &:focus
       color: $c-white
-      &:after
-        background-color: darken($c-cornflower-blue, 8%)
-        box-shadow: 0 0 0 0.2rem rgba($c-cornflower-blue, .5)
+      background-color: darken($c-cornflower-blue, 8%)
+      box-shadow: 0 0 0 0.2rem rgba($c-cornflower-blue, .5)
     &:active
-      &:after
-        background-color: darken($c-cornflower-blue, 10%)
+      background-color: darken($c-cornflower-blue, 10%)
   &--bg-white
     color: $c-surfie-green
-    &:after
-      background-color: $c-white
+    background-color: $c-white
     &:hover
-      &:after
-        background-color: darken($c-white, 6%)
+      background-color: darken($c-white, 5%)
     &:focus
       color: $c-surfie-green
-      &:after
-        background-color: darken($c-white, 6%)
-        box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
+      background-color: darken($c-white, 5%)
+      box-shadow: 0 0 0 0.2rem rgba($c-alto, .5)
     &:active
-      color: $c-surfie-green
-      &:after
-        background-color: darken($c-white, 8%)
+      background-color: darken($c-white, 8%)
   &--bg-transparent
     color: $c-tundora
-    &:after
-      background-color: transparent
+    background-color: transparent
     &:hover
       color: $c-surfie-green
-      &:after
-        background-color: transparent
+      background-color: transparent
     &:focus
       color: $c-tundora
-      &:after
-        background-color: transparent
-        box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
-    &:active
-      &:after
-        background-color: transparent
-  &--bg-alabaster
-    &:after
-      background-color: $c-alabaster
-    &:hover
-      &:after
-        background-color: darken($c-alabaster, 8%)
-    &:focus
-      &:after
-        background-color: darken($c-alabaster, 8%)
-        box-shadow: 0 0 0 0.2rem rgba($c-alabaster, .5)
-    &:active
-      &:after
-        background-color: darken($c-alabaster, 10%)
-  &--border-silver-chalice
-    color: $c-silver-chalice
-    &:after
       background-color: transparent
-      border: 2px solid $c-silver-chalice
-    &:focus
-      color: $c-silver-chalice
-      &:after
-        box-shadow: 0 0 0 0.2rem rgba($c-silver-chalice, .5)
+      box-shadow: 0 0 0 0.2rem rgba($c-surfie-green, .5)
+    &:active
+      background-color: transparent
+  &--bg-alabaster
+    background-color: $c-alabaster
     &:hover
-      color: $c-white
-      svg
-        fill: $c-white
-      &:after
-        opacity: 1
-        background-color: $c-silver-chalice
-  &--size-xs
-    padding: 7px
+      background-color: darken($c-alabaster, 8%)
+    &:focus
+      background-color: darken($c-alabaster, 8%)
+      box-shadow: 0 0 0 0.2rem rgba($c-alabaster, .5)
+    &:active
+      background-color: darken($c-alabaster, 10%)
+  // Sizes
+  @each $size in ['30', '40', '50', '60']
+    &--size-#{$size}
+      width: #{$size}px
+      height: #{$size}px
+      padding: 0
   // Elements
   &__prepend,
   &__append
