--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -786,7 +786,7 @@ p,
 }
 
 .settings-page {
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 .settings-page__wrap {
@@ -982,6 +982,20 @@ p,
 
 .icon-inline:last-child {
   margin-left: 5px;
+}
+
+.icon-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.icon-title__icon {
+  max-width: 21px;
+  margin-right: 10px;
 }
 
 .avatar {
@@ -1560,41 +1574,22 @@ p,
   border-radius: 3px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-}
-
-.button:after {
-  position: absolute;
-  content: '';
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  border-radius: 3px;
   background-color: #0E7D7D;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
-  z-index: -1;
 }
 
-.button:hover:after {
+.button:hover {
   background-color: #0a5858;
 }
 
 .button:focus {
   color: #FFFFFF;
-}
-
-.button:focus:after {
   background-color: #0a5858;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
 }
 
 .button:active {
-  color: #FFFFFF;
-}
-
-.button:active:after {
   background-color: #094f4f;
 }
 
@@ -1602,38 +1597,25 @@ p,
   width: 100%;
 }
 
-.button--squere {
-  padding: 23px;
-}
-
 .button--round {
-  overflow: hidden;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  padding: 4px;
 }
 
-.button--shadow {
+.button--shadowed {
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
 }
 
 .button--bordered {
   color: #0E7D7D;
-}
-
-.button--bordered:after {
   background-color: transparent;
   border: 2px solid #0E7D7D;
 }
 
 .button--bordered:hover {
   color: #FFFFFF;
-}
-
-.button--bordered:hover:after {
-  background-color: #0E7D7D;
+  border-color: #0a5858;
+  background-color: #0a5858;
 }
 
 .button--bordered:hover svg {
@@ -1641,14 +1623,8 @@ p,
 }
 
 .button--bordered:focus {
-  color: #FFFFFF;
-}
-
-.button--bordered:focus:after {
-  background-color: #0a5858;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
   border-color: #0a5858;
+  background-color: #0a5858;
 }
 
 .button--bordered:focus svg {
@@ -1656,151 +1632,110 @@ p,
 }
 
 .button--bordered:active {
-  color: #FFFFFF;
-}
-
-.button--bordered:active:after {
-  background-color: #094f4f;
   border-color: #094f4f;
+  background-color: #094f4f;
 }
 
-.button--bordered:active svg {
-  fill: #FFFFFF;
-}
-
-.button--bg-cornflower-blue:after {
+.button--bg-cornflower-blue {
   background-color: #518EF8;
 }
 
-.button--bg-cornflower-blue:hover:after {
+.button--bg-cornflower-blue:hover {
   background-color: #2a75f6;
 }
 
 .button--bg-cornflower-blue:focus {
   color: #FFFFFF;
-}
-
-.button--bg-cornflower-blue:focus:after {
   background-color: #2a75f6;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(81, 142, 248, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(81, 142, 248, 0.5);
 }
 
-.button--bg-cornflower-blue:active:after {
+.button--bg-cornflower-blue:active {
   background-color: #206ef6;
 }
 
 .button--bg-white {
   color: #0E7D7D;
-}
-
-.button--bg-white:after {
   background-color: #FFFFFF;
 }
 
-.button--bg-white:hover:after {
-  background-color: #f0f0f0;
+.button--bg-white:hover {
+  background-color: #f2f2f2;
 }
 
 .button--bg-white:focus {
   color: #0E7D7D;
-}
-
-.button--bg-white:focus:after {
-  background-color: #f0f0f0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
+  background-color: #f2f2f2;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(218, 218, 218, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(218, 218, 218, 0.5);
 }
 
 .button--bg-white:active {
-  color: #0E7D7D;
-}
-
-.button--bg-white:active:after {
   background-color: #ebebeb;
 }
 
 .button--bg-transparent {
   color: #444444;
-}
-
-.button--bg-transparent:after {
   background-color: transparent;
 }
 
 .button--bg-transparent:hover {
   color: #0E7D7D;
-}
-
-.button--bg-transparent:hover:after {
   background-color: transparent;
 }
 
 .button--bg-transparent:focus {
   color: #444444;
-}
-
-.button--bg-transparent:focus:after {
   background-color: transparent;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(14, 125, 125, 0.5);
 }
 
-.button--bg-transparent:active:after {
+.button--bg-transparent:active {
   background-color: transparent;
 }
 
-.button--bg-alabaster:after {
+.button--bg-alabaster {
   background-color: #F7F7F7;
 }
 
-.button--bg-alabaster:hover:after {
+.button--bg-alabaster:hover {
   background-color: #e3e3e3;
 }
 
-.button--bg-alabaster:focus:after {
+.button--bg-alabaster:focus {
   background-color: #e3e3e3;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(247, 247, 247, 0.5);
   box-shadow: 0 0 0 0.2rem rgba(247, 247, 247, 0.5);
 }
 
-.button--bg-alabaster:active:after {
+.button--bg-alabaster:active {
   background-color: #dedede;
 }
 
-.button--border-silver-chalice {
-  color: #9D9D9D;
+.button--size-30 {
+  width: 30px;
+  height: 30px;
+  padding: 0;
 }
 
-.button--border-silver-chalice:after {
-  background-color: transparent;
-  border: 2px solid #9D9D9D;
+.button--size-40 {
+  width: 40px;
+  height: 40px;
+  padding: 0;
 }
 
-.button--border-silver-chalice:focus {
-  color: #9D9D9D;
+.button--size-50 {
+  width: 50px;
+  height: 50px;
+  padding: 0;
 }
 
-.button--border-silver-chalice:focus:after {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(157, 157, 157, 0.5);
-  box-shadow: 0 0 0 0.2rem rgba(157, 157, 157, 0.5);
-}
-
-.button--border-silver-chalice:hover {
-  color: #FFFFFF;
-}
-
-.button--border-silver-chalice:hover svg {
-  fill: #FFFFFF;
-}
-
-.button--border-silver-chalice:hover:after {
-  opacity: 1;
-  background-color: #9D9D9D;
-}
-
-.button--size-xs {
-  padding: 7px;
+.button--size-60 {
+  width: 60px;
+  height: 60px;
+  padding: 0;
 }
 
 .button__prepend,
@@ -2088,6 +2023,26 @@ p,
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   margin-bottom: 20px;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table tbody tr:nth-child(odd) {
+  background-color: #F7F7F7;
+}
+
+.table td,
+.table th {
+  padding: 15px;
+  vertical-align: middle;
+}
+
+.table td:first-child,
+.table th:first-child {
+  padding-left: 40px;
 }
 
 .tabs__content {
@@ -2537,7 +2492,7 @@ p,
 }
 
 .header__logo-icon {
-  margin-right: 20px;
+  margin-right: 15px;
   max-width: 60px;
 }
 
@@ -2929,6 +2884,30 @@ p,
   width: 50%;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.settings-services__footer {
+  padding: 20px;
+}
+
+.settings-services__footer-text {
+  font-size: 1.125rem;
+  line-height: 1.875rem;
+  font-weight: 600;
+}
+
+.settings-notifications {
+  padding: 20px 40px;
+}
+
+.settings-notifications__heading {
+  padding-bottom: 20px;
+}
+
+.settings-notifications__content {
+  padding-top: 20px;
+  border-top: 1px solid #DADADA;
+  display: inline-block;
 }
 
 .slill {
