--- a/app/sass/components/catalog.sass
+++ b/app/sass/components/catalog.sass
@@ -5,6 +5,7 @@
     padding: 20px 30px
     background-color: $c-alabaster
     border-radius: 6px 6px 0 0
+    user-select: none
     cursor: pointer
     &.is-active
       background-color: $c-white
