upload-documents component was added

--- a/app/pug/pages/application-page/step-2/card-4.pug
+++ b/app/pug/pages/application-page/step-2/card-4.pug
@@ -11,5 +11,5 @@
           | - Attach your document with that you can issue the invoice
   .application-form__card-line
     .row
-      .col-12.col-md-6.col-lg-5
-        +drag-and-drop-box()
+      .col-12.col-lg-8
+        +upload-documents()
