--- a/app/sass/components/document-list-item.sass
+++ b/app/sass/components/document-list-item.sass
@@ -2,6 +2,9 @@
   position: relative
   display: flex
   align-items: center
+  background: $c-white
+  border-radius: $r-secondary
+  padding: 8px 20px
   &__progress
     position: absolute
     background-color: $c-tundora
