--- a/app/pug/pages/settings-page/general/_index.pug
+++ b/app/pug/pages/settings-page/general/_index.pug
@@ -34,8 +34,8 @@ include /partials/link
         +avatar({size:'xl', image:'images/user/avatar.jpg'})
         .settings-general__avatar-button
           +button({bg:'alabaster', type:'round', size:'50'})(type="button")
-            +icon({name:'camera', fill:'boston-blue', width:'s18', height:'16'})
-      .settings-general__avatar-date
+            +icon({name:'camera', fill:'boston-blue', width:'18', height:'16'})
+      .ettings-general__avatar-date
         p.p-sm Member since: 2015-04-12
       .settings-general__avatar-password
         +link({link:'#'})| Change password
@@ -51,7 +51,7 @@ include /partials/link
         each item in list1
           .info-list__item
             .info-list__left
-              p.font-semibold.text-silver-chalice #{item.left}
+              .font-semibold.text-silver-chalice #{item.left}
             .info-list__right
               p(class=`font-semibold ${item.rightAccent ? 'text-boston-blue' : ''}`) #{item.right}
     //- Column
