--- a/app/sass/components/info-list.sass
+++ b/app/sass/components/info-list.sass
@@ -1,11 +1,18 @@
 .info-list
+  display: table
+  max-width: 100%
   &__item
-    display: flex
-    flex-wrap: wrap
+    display: table-row
     &:not(:last-child)
-      margin-bottom: 10px
+      .info-list__left,
+      .info-list__right
+        padding-bottom: 10px
   &__left
-    flex: 1
-    margin-right: 5px
+    display: table-cell
+    vertical-align: top
+    padding-right: 10px
+    white-space: nowrap
   &__right
-    flex: 2
+    display: table-cell
+    vertical-align: top
+    word-break: break-word
