--- a/app/sass/components/settings-education.sass
+++ b/app/sass/components/settings-education.sass
@@ -1,9 +1,14 @@
 .settings-education
-  padding: 20px 40px
+  padding: 60px 40px
   &__wrap
     +row()
   &__col
     +col(3)
+    margin-bottom: 40px
+    +media-max($bp-xxl)
+      +col(6)
+    +media-max($bp-md)
+      +col(12)
   &__line
     &:not(:last-child)
       margin-bottom: 20px
@@ -11,6 +16,9 @@
     padding-bottom: 20px
     margin-bottom: 20px
     border-bottom: 1px solid $c-alto
+    &--alt
+      padding-bottom: 12px
   &__upload
-    margin-top: 40px
     +col(6)
+    +media-max($bp-xl)
+      +col(12)
