--- a/app/sass/components/upload-documents.sass
+++ b/app/sass/components/upload-documents.sass
@@ -1,4 +1,4 @@
-.uploaded-documents
+.upload-documents
   width: 100%
   background-color: $c-alabaster
   border-radius: $r-primary
@@ -6,7 +6,16 @@
     padding: 25px
     display: flex
     align-items: center
+    flex-wrap: wrap
     justify-content: space-between
     border-bottom: 1px solid $c-alto
+    +media-max($bp-md)
+      padding: 20px 15px
+    &-title
+      +media-max($bp-sm)
+        width: 100%
+        margin-bottom: 15px
   &__content
     padding: 25px
+    +media-max($bp-md)
+      padding: 20px 15px
