--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -93,6 +93,13 @@ svg {
   display: block;
 }
 
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 15px;
+  max-width: 1720px;
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
@@ -2288,6 +2295,9 @@ p,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  background: #FFFFFF;
+  border-radius: 10px;
+  padding: 8px 20px;
 }
 
 .document-list-item__progress {
@@ -2330,73 +2340,6 @@ p,
 .document-list-item__delete:hover {
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
-}
-
-.drag-and-drop-box {
-  width: 100%;
-  min-height: auto;
-  border-radius: 3px;
-  border: 1px solid #DADADA;
-  padding: 20px;
-}
-
-.drag-and-drop-box.dz-started {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.drag-and-drop-box.dz-started .drag-and-drop-box__label {
-  -webkit-box-ordinal-group: 2;
-  -ms-flex-order: 1;
-  order: 1;
-  padding-left: 20px;
-}
-
-.drag-and-drop-box.dz-started .drag-and-drop-box__label-title {
-  display: none;
-}
-
-.drag-and-drop-box__label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-.drag-and-drop-box__label-title {
-  font-size: 0.875rem;
-  font-weight: 600;
-  line-height: 1;
-  color: #444444;
-}
-
-.drag-and-drop-box__tpl {
-  display: none;
-}
-
-.drag-and-drop-box__preview {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-}
-
-.drag-and-drop-box__preview-scroll {
-  max-height: 160px;
-  padding-right: 15px;
-}
-
-.drag-and-drop-box__preview .simplebar-content > *:not(:last-child) {
-  margin-bottom: 5px;
-}
-
-.drag-and-drop-box__preview .simplebar-content .document-list-item:first-child {
-  display: none;
 }
 
 .registration-success-modal {
@@ -2765,39 +2708,40 @@ p,
 
 .catalog__content {
   background-color: #FFFFFF;
-  padding: 40px 0;
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   border-radius: 0 3px 3px 3px;
 }
 
-.info-list__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+.info-list {
+  display: table;
+  max-width: 100%;
 }
 
-.info-list__item:not(:last-child) {
-  margin-bottom: 10px;
+.info-list__item {
+  display: table-row;
+}
+
+.info-list__item:not(:last-child) .info-list__left,
+.info-list__item:not(:last-child) .info-list__right {
+  padding-bottom: 10px;
 }
 
 .info-list__left {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  margin-right: 5px;
+  display: table-cell;
+  vertical-align: top;
+  padding-right: 10px;
+  white-space: nowrap;
 }
 
 .info-list__right {
-  -webkit-box-flex: 2;
-  -ms-flex: 2;
-  flex: 2;
+  display: table-cell;
+  vertical-align: top;
+  word-break: break-word;
 }
 
 .settings-general {
-  padding: 20px 140px;
+  padding: 60px 15px;
 }
 
 .settings-general__wrap {
@@ -2842,7 +2786,7 @@ p,
 }
 
 .settings-general__list {
-  width: 33.33333%;
+  width: 25%;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -2854,7 +2798,7 @@ p,
 }
 
 .settings-education {
-  padding: 20px 40px;
+  padding: 60px 40px;
 }
 
 .settings-education__wrap {
@@ -2871,6 +2815,7 @@ p,
   width: 25%;
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 40px;
 }
 
 .settings-education__line:not(:last-child) {
@@ -2883,15 +2828,18 @@ p,
   border-bottom: 1px solid #DADADA;
 }
 
+.settings-education__heading--alt {
+  padding-bottom: 12px;
+}
+
 .settings-education__upload {
-  margin-top: 40px;
   width: 50%;
   padding-left: 15px;
   padding-right: 15px;
 }
 
 .settings-services {
-  padding: 5px 0 20px;
+  padding: 45px 0 60px;
 }
 
 .settings-services__footer {
@@ -2905,7 +2853,7 @@ p,
 }
 
 .settings-notifications {
-  padding: 20px 40px;
+  padding: 60px 40px;
 }
 
 .settings-notifications__heading {
@@ -2942,14 +2890,56 @@ p,
   margin-right: 10px;
 }
 
-.uploaded-documents {
+.upload-documents {
   width: 100%;
   background-color: #F7F7F7;
   border-radius: 3px;
 }
 
-.uploaded-documents__header {
+.upload-documents__header {
   padding: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  border-bottom: 1px solid #DADADA;
+}
+
+.upload-documents__content {
+  padding: 25px;
+}
+
+.upload-documents-box.dz-started {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.upload-documents-box.dz-started .upload-documents-box__label {
+  margin-right: 15px;
+}
+
+.upload-documents-box__label {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background-color: #FFFFFF;
+  border-radius: 3px;
+  -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
+  padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2959,11 +2949,47 @@ p,
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  border-bottom: 1px solid #DADADA;
+  cursor: pointer;
 }
 
-.uploaded-documents__content {
-  padding: 25px;
+.upload-documents-box__label.is-focused {
+  border: 1px solid red;
+}
+
+.upload-documents-box__label-title {
+  font-size: 0.875rem;
+  font-weight: 600;
+  line-height: 1;
+  color: #444444;
+  pointer-events: none;
+}
+
+.upload-documents-box__label-button {
+  pointer-events: none;
+}
+
+.upload-documents-box__tpl {
+  display: none;
+}
+
+.upload-documents-box__preview {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  margin-left: 15px;
+}
+
+.upload-documents-box__preview-scroll {
+  max-height: 100px;
+  padding-right: 15px;
+}
+
+.upload-documents-box__preview .simplebar-content > *:not(:last-child) {
+  margin-bottom: 22px;
+}
+
+.upload-documents-box__preview .simplebar-content .document-list-item:first-child {
+  display: none;
 }
 
 @media (min-width: 361px) {
@@ -4026,6 +4052,12 @@ p,
   .container {
     max-width: 1140px;
   }
+
+  .settings-education__col {
+    width: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -4046,6 +4078,12 @@ p,
     -ms-flex-pack: end;
     justify-content: flex-end;
     margin-bottom: 20px;
+  }
+
+  .settings-education__upload {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
@@ -4109,6 +4147,37 @@ p,
   .registration-success-modal {
     padding: 40px 15px 60px 15px;
   }
+
+  .settings-education__col {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .upload-documents__header {
+    padding: 20px 15px;
+  }
+
+  .upload-documents__content {
+    padding: 20px 15px;
+  }
+
+  .upload-documents-box.dz-started .upload-documents-box__label {
+    width: 100%;
+    -webkit-box-flex: 1;
+    -ms-flex: auto;
+    flex: auto;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+
+  .upload-documents-box__preview {
+    -webkit-box-flex: 1;
+    -ms-flex: auto;
+    flex: auto;
+    width: 100%;
+    margin-left: 0;
+  }
 }
 
 @media (max-width: 576px) {
@@ -4136,16 +4205,9 @@ p,
     margin-right: 10px;
   }
 
-  .drag-and-drop-box {
-    padding: 15px;
-  }
-
-  .drag-and-drop-box.dz-started .drag-and-drop-box__label {
-    padding-left: 15px;
-  }
-
-  .drag-and-drop-box__preview-scroll {
-    padding-right: 10px;
+  .upload-documents__header-title {
+    width: 100%;
+    margin-bottom: 15px;
   }
 }
 
