--- a/app/sass/components/upload-documents-box.sass
+++ b/app/sass/components/upload-documents-box.sass
@@ -11,6 +11,7 @@
         margin-right: 0
         margin-bottom: 15px
   &__label
+    position: relative
     flex: 1
     background-color: $c-white
     border-radius: $r-primary
@@ -20,8 +21,10 @@
     align-items: center
     justify-content: space-between
     cursor: pointer
+    border: 2px dashed transparent
+    transition: 0.2s
     &.is-focused
-      border: 1px solid red
+      border-color: $c-boston-blue
     &-title
       font-size: rem(14px)
       font-weight: 600
