header was fixed

--- a/app/pug/partials/lang-select.pug
+++ b/app/pug/partials/lang-select.pug
@@ -3,7 +3,7 @@ include /partials/select
 mixin lang-select(props = {})
 
   +select({
-    radius:'secondary',
+    inline:true,
     label:{name:'lt', content:`<img src="images/icons/planet.svg"/><span>LT</span>`},
     options:[
       {name:'lt', content:`<img src="images/icons/planet.svg"/><span>LT</span>`},
