--- a/app/pug/partials/notifications-dropdown.pug
+++ b/app/pug/partials/notifications-dropdown.pug
@@ -5,7 +5,7 @@ mixin notifications-dropdown(props = {})
     .dropdown__toggle.notifications-dropdown__toggle(data-dropdown-toggle="notifications")
       .notifications-dropdown__toggle-icon
         +icon({name:'bell', fill:'surfie-green', width:'24', height:'25'})
-      .notifications-dropdown__toggle-title 4 new
+      .notifications-dropdown__toggle-title 4
     .dropdown__body.notifications-dropdown__body.js-dropdown-body
       div(data-dropdown-simplebar class="custom-scroll")
         p Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam consequuntur dolore deserunt earum, nihil neque quibusdam sapiente, praesentium quisquam eaque expedita autem? Ab distinctio placeat quos velit adipisci harum libero.
