--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -3,11 +3,11 @@
   background-color: $c-white
   box-shadow: $s-primary
   border-radius: 0 0 $r-secondary $r-secondary
-  padding: 5px 15px
   &__wrap
     display: flex
     max-width: $cnt-xxl
     margin: 0 auto
+    padding: 10px
     align-items: center
     justify-content: space-between
   &__left
@@ -17,12 +17,12 @@
     display: flex
     align-items: center
     &-icon
-      margin-right: 15px
-      max-width: 60px
+      margin-right: 10px
+      max-width: 50px
     &-title
       font-family: 'Gilroy', sans-serif
+      font-size: rem(22px)
       font-weight: 500
-      font-size: rem(30px)
       line-height: 1
       color: $c-mine-shaft
   &__right
