--- a/app/sass/components/navigation.sass
+++ b/app/sass/components/navigation.sass
@@ -22,5 +22,7 @@
     &:hover,
     &.is-active
       background-color: $c-alabaster
+    &.is-active
+      font-weight: 700
     &:active
       background-color: darken($c-alabaster, 8%)
