--- a/app/pug/partials/upload-documents.pug
+++ b/app/pug/partials/upload-documents.pug
@@ -5,9 +5,9 @@ mixin upload-documents(props = {})
   .upload-documents
     .upload-documents__header
       .upload-documents__header-title
-        h4 Uploaded documents:
+        h4 Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span>
       .upload-documents__header-button
-        +button({bg:'white', shadow:true})(type="button")
+        +button({bg:'white', shadow:true, disabled:true})(type="button")
           span Download all
           span.button__icon
             +icon({name:'download', width:'21', height:'19'})
