--- a/app/sass/components/button.sass
+++ b/app/sass/components/button.sass
@@ -33,6 +33,7 @@
     color: $c-surfie-green
     background-color: transparent
     border: 2px solid $c-surfie-green
+    padding: 12px 30px 13px
     &:hover
       color: $c-white
       border-color: darken($c-surfie-green, 8%)
@@ -69,6 +70,14 @@
       box-shadow: 0 0 0 0.2rem rgba($c-alto, .5)
     &:active
       background-color: darken($c-white, 8%)
+    &.button--disabled
+      background-color: transparent
+      border: 1px solid $c-silver-chalice
+      padding: 13px 30px 14px
+      color: $c-silver-chalice
+      box-shadow: none
+      svg
+        fill: $c-silver-chalice
   &--bg-transparent
     color: $c-tundora
     background-color: transparent
@@ -96,6 +105,10 @@
       width: #{$size}px
       height: #{$size}px
       padding: 0
+  // State
+  &--disabled
+    pointer-events: none
+    user-select: none
   // Elements
   &__prepend,
   &__append
@@ -106,11 +119,11 @@
   &__prepend
     left: 30px
     +media-max($bp-md)
-      left: 15px
+    left: 15px
   &__append
     right: 30px
     +media-max($bp-md)
-      right: 15px
+    right: 15px
   &__icon
     &:first-child
       margin-right: 10px
