--- a/app/pug/partials/skill.pug
+++ b/app/pug/partials/skill.pug
@@ -6,4 +6,4 @@ mixin skill(props = {})
   .slill
     .slill__title #{title}
     .slill__icon
-      +close()
+      +close({color:'brick-red', size:'10'})
