--- a/app/pug/pages/settings-page/general/_index.pug
+++ b/app/pug/pages/settings-page/general/_index.pug
@@ -35,10 +35,10 @@ include /partials/link
         .settings-general__avatar-button
           +button({bg:'alabaster', type:'round', size:'50'})(type="button")
             +icon({name:'camera', fill:'boston-blue', width:'18', height:'16'})
-      .ettings-general__avatar-date
+      .settings-general__avatar-date
         p.p-sm Member since: 2015-04-12
       .settings-general__avatar-password
-        +link({link:'#'})| Change password
+        +link()(data-modal-open="password-change-modal")| Change password
     //- Column
     .settings-general__list
       .settings-general__heading
