--- a/app/sass/components/password-change-modal.sass
+++ b/app/sass/components/password-change-modal.sass
@@ -1,4 +1,4 @@
-.registration-success-modal
+.password-change-modal
   padding: 60px 15px
   +media-max($bp-md)
     padding: 40px 15px
@@ -6,12 +6,11 @@
     display: flex
     flex-direction: column
     text-align: center
-    align-items: center
-    max-width: 500px
     margin: 0 auto
-  &__icon
-    margin-bottom: 13px
+    max-width: 410px
   &__title
     margin-bottom: 20px
   &__text
-    margin-bottom: 50px
+    margin-bottom: 30px
+  &__buttons
+    margin-top: 50px
