--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -45,8 +45,9 @@
 @import ./components/dropdown
 @import ./components/table
 @import ./components/tabs
+@import ./components/slill
+@import ./components/palette
 @import ./components/status-message
-@import ./components/modal-dialog
 @import ./components/inner-header
 @import ./components/application-form
 @import ./components/form-steps
@@ -66,6 +67,7 @@
 @import ./components/settings-education
 @import ./components/settings-services
 @import ./components/settings-notifications
-@import ./components/slill
 @import ./components/upload-documents
 @import ./components/upload-documents-box
+@import ./components/password-change-modal
+@import ./components/password-change-success-modal
