password-change-success-modal was enabled

--- a/app/pug/settings-page.pug
+++ b/app/pug/settings-page.pug
@@ -44,5 +44,5 @@ block content
                 include /pages/settings-page/notifications/_index
     +password-change-modal({type:'change', title:'Change password', text:'Cnanging password information Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'})
     //- +password-change-modal({type:'recover', title:'Recover password', text:'Recovering password information Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.'})
-    //- +password-change-success-modal({title:'Your password has been changed sucsessfully'})
+    +password-change-success-modal({title:'Your password has been changed sucsessfully'})
     //- +password-change-success-modal({title:'Your password has been recovered sucsessfully'})
